# Simulacra_v2

./: .gitignore  README.md  Simulacra_Master_Checklist.txt  Simulacra_v2.code-workspace  Simulacra_v4.code-workspace  benchmark.json  build.bat  chatlog.txt  install_vs_tools.ps1  launcher.bat  launcher.py  main.py  mypy.ini  project_stats.json  pyproject.toml  pytest.ini  requirements.txt  results.json  setup.py  setup_paths.py
config/: game_config.json
data/: traits.msgpack
docs/: ROADMAP.md
modules/: __init__.py  achievements.py  async_file.py  async_io.py  config_manager.py  constants.py  credits.py  debug.py  disasters.py  error_handler.py  game.py  game_types.py  highlights.py  log_utils.py  logger.py  merge.py  mutation_generator.py  mutations.py  performance.py  player.py  proc_effects.py  reflection.py  save_load.py  settings.py  shared_types.py  shop.py  soft_prestige_merge.py  traits.py  utils.py  vault.py
tests/: base_test.py  benchmark_suite.py  conftest.py  pytest.ini  test_achievements.py  test_config.py  test_dummy.py  test_game.py  test_memory.py  test_mutations.py  test_performance.py  test_profile.py  test_stats.py  test_traits.py
tools/: # Code Citations.md  __init__.py  analyze_performance.py  analyze_profile.py  build.ps1  check_index_status.py  cleanup.py  cleanup_config.py  config_manager.py  configure_remote.py  create.ps1  debug_modules.py  debugger.py  dev_cleanup.py  dev_launcher.py  fix_copilot_index.py  fix_dependencies.ps1  fix_github_cli.ps1  fix_remote.py  git_setup.py  github_setup.py  list_files.ps1  migrate_project.ps1  (+18 more)
(+76 files in other folders)
